Java/RA Expression/uk/ac/ed/inf/s1654170/mrai/RelationalAlgebraParser.java
// Generated from RelationalAlgebra.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RelationalAlgebraParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LEFT_BRACKET=3, RIGHT_BRACKET=4, LEFT_SQUARE_BRACKET=5, 
		RIGHT_SQUARE_BRACKET=6, SINGLE_QUOTE=7, NAME=8, PROJECTION=9, RENAMING=10, 
		PRODUCT=11, UNION=12, UNION_MAX=13, INTERSECTION=14, DIFFERENCE=15, ELIMINATE=16, 
		SELECT=17, AND=18, OR=19, EQUALITY=20, INEQUALITY=21, LESS=22, LESS_EQUAL=23, 
		GREATER=24, GREATER_EQUAL=25, NOT=26, WS=27;
	public static final int
		RULE_start = 0, RULE_raExpr = 1, RULE_base = 2, RULE_attributes = 3, RULE_subst = 4, 
		RULE_condition = 5, RULE_term = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "raExpr", "base", "attributes", "subst", "condition", "term"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'->'", "'('", "')'", "'['", "']'", "'''", null, "':PROJECT:'", 
			"':RENAME:'", "':PRODUCT:'", "':UPLUS:'", "':UMAX:'", "':INTERSECT:'", 
			"':DIFF:'", "':ELIM:'", "':SELECT:'", "':AND:'", "':OR:'", "':=:'", "':!=:'", 
			"':<:'", "':<=:'", "':>:'", "':>=:'", "':NOT:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_SQUARE_BRACKET", 
			"RIGHT_SQUARE_BRACKET", "SINGLE_QUOTE", "NAME", "PROJECTION", "RENAMING", 
			"PRODUCT", "UNION", "UNION_MAX", "INTERSECTION", "DIFFERENCE", "ELIMINATE", 
			"SELECT", "AND", "OR", "EQUALITY", "INEQUALITY", "LESS", "LESS_EQUAL", 
			"GREATER", "GREATER_EQUAL", "NOT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RelationalAlgebra.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RelationalAlgebraParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			raExpr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RaExprContext extends ParserRuleContext {
		public RaExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_raExpr; }
	 
		public RaExprContext() { }
		public void copyFrom(RaExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IntersectionContext extends RaExprContext {
		public List<RaExprContext> raExpr() {
			return getRuleContexts(RaExprContext.class);
		}
		public RaExprContext raExpr(int i) {
			return getRuleContext(RaExprContext.class,i);
		}
		public TerminalNode INTERSECTION() { return getToken(RelationalAlgebraParser.INTERSECTION, 0); }
		public IntersectionContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterIntersection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitIntersection(this);
		}
	}
	public static class ParenthisisedExprContext extends RaExprContext {
		public TerminalNode LEFT_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_BRACKET, 0); }
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_BRACKET, 0); }
		public ParenthisisedExprContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterParenthisisedExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitParenthisisedExpr(this);
		}
	}
	public static class SelectionContext extends RaExprContext {
		public TerminalNode SELECT() { return getToken(RelationalAlgebraParser.SELECT, 0); }
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_SQUARE_BRACKET, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_SQUARE_BRACKET, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_BRACKET, 0); }
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_BRACKET, 0); }
		public SelectionContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitSelection(this);
		}
	}
	public static class BaseRelationContext extends RaExprContext {
		public BaseContext base() {
			return getRuleContext(BaseContext.class,0);
		}
		public BaseRelationContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterBaseRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitBaseRelation(this);
		}
	}
	public static class EliminateContext extends RaExprContext {
		public TerminalNode ELIMINATE() { return getToken(RelationalAlgebraParser.ELIMINATE, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_BRACKET, 0); }
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_BRACKET, 0); }
		public EliminateContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterEliminate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitEliminate(this);
		}
	}
	public static class UnionMaxContext extends RaExprContext {
		public List<RaExprContext> raExpr() {
			return getRuleContexts(RaExprContext.class);
		}
		public RaExprContext raExpr(int i) {
			return getRuleContext(RaExprContext.class,i);
		}
		public TerminalNode UNION_MAX() { return getToken(RelationalAlgebraParser.UNION_MAX, 0); }
		public UnionMaxContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterUnionMax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitUnionMax(this);
		}
	}
	public static class ProjectionContext extends RaExprContext {
		public TerminalNode PROJECTION() { return getToken(RelationalAlgebraParser.PROJECTION, 0); }
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_SQUARE_BRACKET, 0); }
		public AttributesContext attributes() {
			return getRuleContext(AttributesContext.class,0);
		}
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_SQUARE_BRACKET, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_BRACKET, 0); }
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_BRACKET, 0); }
		public ProjectionContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterProjection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitProjection(this);
		}
	}
	public static class ProductContext extends RaExprContext {
		public List<RaExprContext> raExpr() {
			return getRuleContexts(RaExprContext.class);
		}
		public RaExprContext raExpr(int i) {
			return getRuleContext(RaExprContext.class,i);
		}
		public TerminalNode PRODUCT() { return getToken(RelationalAlgebraParser.PRODUCT, 0); }
		public ProductContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterProduct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitProduct(this);
		}
	}
	public static class DifferenceContext extends RaExprContext {
		public List<RaExprContext> raExpr() {
			return getRuleContexts(RaExprContext.class);
		}
		public RaExprContext raExpr(int i) {
			return getRuleContext(RaExprContext.class,i);
		}
		public TerminalNode DIFFERENCE() { return getToken(RelationalAlgebraParser.DIFFERENCE, 0); }
		public DifferenceContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterDifference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitDifference(this);
		}
	}
	public static class UnionContext extends RaExprContext {
		public List<RaExprContext> raExpr() {
			return getRuleContexts(RaExprContext.class);
		}
		public RaExprContext raExpr(int i) {
			return getRuleContext(RaExprContext.class,i);
		}
		public TerminalNode UNION() { return getToken(RelationalAlgebraParser.UNION, 0); }
		public UnionContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterUnion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitUnion(this);
		}
	}
	public static class RenamingContext extends RaExprContext {
		public TerminalNode RENAMING() { return getToken(RelationalAlgebraParser.RENAMING, 0); }
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_SQUARE_BRACKET, 0); }
		public List<SubstContext> subst() {
			return getRuleContexts(SubstContext.class);
		}
		public SubstContext subst(int i) {
			return getRuleContext(SubstContext.class,i);
		}
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_SQUARE_BRACKET, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(RelationalAlgebraParser.LEFT_BRACKET, 0); }
		public RaExprContext raExpr() {
			return getRuleContext(RaExprContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(RelationalAlgebraParser.RIGHT_BRACKET, 0); }
		public RenamingContext(RaExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterRenaming(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitRenaming(this);
		}
	}

	public final RaExprContext raExpr() throws RecognitionException {
		return raExpr(0);
	}

	private RaExprContext raExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RaExprContext _localctx = new RaExprContext(_ctx, _parentState);
		RaExprContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_raExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				{
				_localctx = new BaseRelationContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(17);
				base();
				}
				break;
			case LEFT_BRACKET:
				{
				_localctx = new ParenthisisedExprContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(18);
				match(LEFT_BRACKET);
				setState(19);
				raExpr(0);
				setState(20);
				match(RIGHT_BRACKET);
				}
				break;
			case PROJECTION:
				{
				_localctx = new ProjectionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(22);
				match(PROJECTION);
				setState(23);
				match(LEFT_SQUARE_BRACKET);
				setState(24);
				attributes();
				setState(25);
				match(RIGHT_SQUARE_BRACKET);
				setState(26);
				match(LEFT_BRACKET);
				setState(27);
				raExpr(0);
				setState(28);
				match(RIGHT_BRACKET);
				}
				break;
			case RENAMING:
				{
				_localctx = new RenamingContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(30);
				match(RENAMING);
				setState(31);
				match(LEFT_SQUARE_BRACKET);
				setState(32);
				subst();
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(33);
					match(T__0);
					setState(34);
					subst();
					}
					}
					setState(39);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(40);
				match(RIGHT_SQUARE_BRACKET);
				setState(41);
				match(LEFT_BRACKET);
				setState(42);
				raExpr(0);
				setState(43);
				match(RIGHT_BRACKET);
				}
				break;
			case ELIMINATE:
				{
				_localctx = new EliminateContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(45);
				match(ELIMINATE);
				setState(46);
				match(LEFT_BRACKET);
				setState(47);
				raExpr(0);
				setState(48);
				match(RIGHT_BRACKET);
				}
				break;
			case SELECT:
				{
				_localctx = new SelectionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(50);
				match(SELECT);
				setState(51);
				match(LEFT_SQUARE_BRACKET);
				setState(52);
				condition();
				setState(53);
				match(RIGHT_SQUARE_BRACKET);
				setState(54);
				match(LEFT_BRACKET);
				setState(55);
				raExpr(0);
				setState(56);
				match(RIGHT_BRACKET);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(75);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new UnionContext(new RaExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_raExpr);
						setState(60);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(61);
						match(UNION);
						setState(62);
						raExpr(10);
						}
						break;
					case 2:
						{
						_localctx = new UnionMaxContext(new RaExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_raExpr);
						setState(63);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(64);
						match(UNION_MAX);
						setState(65);
						raExpr(9);
						}
						break;
					case 3:
						{
						_localctx = new ProductContext(new RaExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_raExpr);
						setState(66);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(67);
						match(PRODUCT);
						setState(68);
						raExpr(8);
						}
						break;
					case 4:
						{
						_localctx = new IntersectionContext(new RaExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_raExpr);
						setState(69);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(70);
						match(INTERSECTION);
						setState(71);
						raExpr(7);
						}
						break;
					case 5:
						{
						_localctx = new DifferenceContext(new RaExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_raExpr);
						setState(72);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(73);
						match(DIFFERENCE);
						setState(74);
						raExpr(6);
						}
						break;
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BaseContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RelationalAlgebraParser.NAME, 0); }
		public BaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterBase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitBase(this);
		}
	}

	public final BaseContext base() throws RecognitionException {
		BaseContext _localctx = new BaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_base);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(RelationalAlgebraParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(RelationalAlgebraParser.NAME, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitAttributes(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attributes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(NAME);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(83);
				match(T__0);
				setState(84);
				match(NAME);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubstContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(RelationalAlgebraParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(RelationalAlgebraParser.NAME, i);
		}
		public SubstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subst; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).enterSubst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RelationalAlgebraListener ) ((RelationalAlgebraListener)listener).exitSubst(this);
		}
	}

	public final SubstContext subst() throws RecognitionException {
		SubstContext _localctx = new SubstContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_subst);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(NAME);
			setState(91);
			match(T__1);
			setState(92);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
